# librtpkcs11-sign-service

./: .gitignore  Cargo.toml  README.md  build.rs
archive/: pyproject.toml
archive/rt_sign/: main.py  sign.py
librtpkcs11sign/: CMakeLists.txt  Makefile  sign.c  sign.h  test_sign  test_sign.c
librtpkcs11sign/src/: CMakeLists.txt  dbg.h  errors.c  errors.h  librtpkcs11sign.h  sign.c  sign.h
librtpkcs11sign/tests/: CMakeLists.txt  errors_tests.c  sign_tests.c
librtpks11sign/: Makefile  librtpks11.rs  sign.c  sign.h  test_sign  test_sign.c
rt_sign/: main.py  sign.py
src/: librtpkcs11.rs  librtpkcs11sign.rs  main.rs
