[tool.poetry]
name = "rt-sign"
version = "0.1.0"
description = ""
authors = ["Viacheslav Matrizaev <Viacheslav.Matrizaev2@nike.com>"]
readme = "README.md"
packages = [{include = "rt_sign"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
